# scitoflow

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: api.md  architecture.md  conf.py  index.md  installation.md  requirements.txt  tutorials.md
docs/_static/: custom.css
docs/notebooks/: 01_quickstart.ipynb  01_quickstart.py  02_modality_topologies.ipynb  02_modality_topologies.py  03_training_and_readouts.ipynb  03_training_and_readouts.py
ibex/: README.md  env_create.sbatch  environment.yml
ibex/atac/: Snakefile  config.yaml
ibex/deng/: config_atac.yaml  config_rna.yaml  download_parallel.sbatch  remap_chrom.awk  snakemake_atac.sbatch
ibex/misar/: ncbi2ucsc.tsv  srr_map.json
ibex/rna/: Snakefile_star  config_brain.yaml  snakemake_brain.sbatch
preprocessing/: submit.sh
preprocessing/atac/: snakemake.sbatch
preprocessing/deng/: Snakefile_atac  Snakefile_rna  download.sbatch  download_rest.sbatch  snakemake_rna.sbatch
preprocessing/misar/: Snakefile_atac  Snakefile_rna  config_atac.yaml  config_rna.yaml  misar_barcodes.txt  snakemake_atac.sbatch  snakemake_rna.sbatch
preprocessing/rna/: Snakefile  Snakefile_nobbduk  config.yaml  snakemake.sbatch  snakemake_brain_nobbduk.sbatch  snakemake_star.sbatch
scitoflow/: __init__.py  datasets.py
scitoflow/core/: model.py  networks.py  topology.py  velocity_field.py
scitoflow/plotting/: spatial.py  velocity.py
scitoflow/preprocess/: align.py  build_dataset.py  build_joint.py  gene_activity.py  graph_utils.py  simulate.py
scitoflow/training/: train.py
tests/: test_smoke.py  test_temporal.py
